# ducktor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: roundtrip.rs  ui.rs
tests/ui/: failing.rs  failing.stderr  passing.rs
