[package]
name = "ducktor"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }

[dev-dependencies]
js-sys = "0.3.64"
trybuild = "1.0.80"
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.34"
