[package]
name = "ducktor"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hamza1311/ducktor"
authors = ["Muhammad Hamza <me@mhamza.dev>"]
license = "MIT"
description = "A macro to generate constructor to instanicate structs from JsValue using duck-typing."
documentation = "https://docs.rs/ducktor"
keywords = ["wasm", "wasm-bindgen", "duck-typing", "constructor", "macro"]
categories = ["development-tools::ffi", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
js-sys = "0.3.64"
trybuild = "1.0.80"
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.34"
